--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <canvas id="canvas1"></canvas>
         </section>
         <section class="form">
-            <section class="row">
+            <section id="general" class="row">
                 <section>
                     <h2>駅名標サイズ</h2>
                     <label>
@@ -43,40 +43,67 @@
                     <label>
                         <div class="label-text">タイプ</div>
                         <div class="input">
-                            <select data-bind="signType">
+                            <select id="signType" data-bind="signType">
                                 <option value="jre-kanji">JR東日本 漢字主体</option>
                             </select>
                         </div>
                     </label>
                 </section>
             </section>
+            <section id="generator" class="row">
+                <section>
+                    <h2>駅名標筐体</h2>
+                    <label>
+                        <div class="label-text">筐体タイプ</div>
+                        <select data-bind="boardType">
+                            <option value="none">なし</option>
+                            <option value="fluore">蛍光灯</option>
+                            <option value="led">LED</option>
+                            <option value="nonLight">無電照</option>
+                        </select>
+                    </label>
+                    <label>
+                        <input data-bind="boardLighting" data-prop="boardLighting" type="checkbox">
+                        <span class="toggle"></span>
+                        点灯する
+                    </label>
+                </section>
+                <section>
+                    <h2>駅名・ナンバリング</h2>
+                    <label>
+                        <div class="label-text">駅名 漢字</div>
+                        <div class="input">
+                            <input data-bind="staNameKanji" type="text">
+                        </div>
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 英語</div>
+                        <div class="input">
+                            <input data-bind="staNameEnglish" type="text">
+                        </div>
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 ひらがな</div>
+                        <div class="input">
+                            <input data-bind="staNameKana" type="text">
+                        </div>
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 中国語(簡体字)</div>
+                        <div class="input">
+                            <input data-bind="staNameChinese" type="text">
+                        </div>
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 韓国語(ハングル)</div>
+                        <div class="input">
+                            <input data-bind="staNameKorean" type="text">
+                        </div>
+                    </label>
+                </section>
+            </section>
         </section>
-        <pre id="test"></pre>
-        <script type="application/json" id="generatorData">
-        {
-            "jre-kanji": {
-                "forms": [
-                    {
-                        "title": "設定",
-                        "contents": [
-                            {"label": "ナンバリング・4ヶ国語表記", "type": "toggle", "model": "numbering", "value": true}
-                        ]
-                    },
-                    {
-                        "title": "駅名・ナンバリング",
-                        "contents": [
-                            {"label": "漢字", "type": "text", "model": "staNameKanji", "value": "東京"},
-                            {"label": "英語", "type": "text", "model": "staNameEngligh", "value": "Tōkyō"},
-                            {"label": "ひらがな", "type": "text", "model": "staNameKana", "value": "とうきょう"},
-                            {"label": "中国語(簡体字)", "type": "text", "model": "staNameChinese", "value": "东京"},
-                            {"label": "韓国語(ハングル)", "type": "text", "model": "staNameKorean", "value": "도쿄"},
-                            {"if": "numbering", "label": "ナンバリング", "type": "text", "model": "numberingText", "value": "JY 01", "pattern": "^[A-Z]{2}\\s*[0-9]{2}$"}
-                        ]
-                    }
-                ]
-            }
-        }
-        </script>
+
         <script src="script.js" defer></script>
     </body>
 </html>
