--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </select>
                     </label>
                     <label>
-                        <input data-bind="boardLighting" data-prop="boardLighting" type="checkbox">
+                        <input data-bind="boardLighting" data-prop="boardType | lightDisable" type="checkbox">
                         <span class="toggle"></span>
                         点灯する
                     </label>
