--- a/index.html
+++ b/index.html
@@ -22,7 +22,119 @@
             <canvas id="canvas1"></canvas>
         </section>
         <section class="form">
-            <section id="general" class="row">
+            <section class="row">
+                <section>
+                    <h2>駅名標サイズ</h2>
+                    <label>
+                        <div class="label-text">幅</div>
+                        <input v-model.number="size.width" type="number">mm
+                    </label>
+                    <label>
+                        <div class="label-text">高さ</div>
+                        <input v-model.number="size.height" type="number">mm
+                    </label>
+                </section>
+                <section>
+                    <h2>駅名標タイプ</h2>
+                    <label>
+                        <div class="label-text">タイプ</div>
+                        <select v-model="signType">
+                            <option value="jre-kanji">JR東日本 漢字主体</option>
+                        </select>
+                    </label>
+                </section>
+            </section>
+            <section v-if="signType === 'jre-kanji'" class="row">
+                <section>
+                    <h2>駅名標設定</h2>
+                    <label>
+                        <div class="label-text">筐体タイプ</div>
+                        <div class="input">
+                            <select v-model="signData.board.type" @change="changeBoardType">
+                                <option value="none">なし</option>
+                                <option value="floure">蛍光灯型</option>
+                                <option value="led">LED型</option>
+                                <option value="nonLight">無電照型</option>
+                            </select>
+                        </div>
+                    </label>
+                    <label>
+                        <input
+                            type="checkbox"
+                            v-model="signData.board.light"
+                            :disabled="!enableBoardLight">
+                        <span class="toggle"></span>
+                        点灯する
+                    </label>
+                    <label>
+                        <input
+                            type="checkbox"
+                            v-model="signData.numbering">
+                        <span class="toggle"></span>
+                        ナンバリング・4ヶ国語表記
+                    </label>
+                </section>
+                <section>
+                    <h2>駅名{{signData.numbering? "・ナンバリング" : ""}}</h2>
+                    <label>
+                        <div class="label-text">駅名 日本語(漢字)</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.name.kanji">
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 英語(アルファベット)</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.name.english">
+                        <div class="ex-input">
+                            <div v-for="c in macrons" @click="signData.sta.name.english += c">{{c}}</div>
+                        </div>
+                    </label>
+                    <label>
+                        <div class="label-text">駅名 日本語(ひらがな)</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.name.kana">
+                    </label>
+                    <label v-show="signData.numbering">
+                        <div class="label-text">駅名 中国語(簡体字)</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.name.chinese">
+                    </label>
+                    <label v-show="signData.numbering">
+                        <div class="label-text">駅名 韓国語(ハングル)</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.name.korean">
+                    </label>
+                    <label v-show="signData.numbering">
+                        <div class="label-text">ナンバリング</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.numbering"
+                            pattern="^[A-Z]{2}\s*(-\s*)?[0-9]{2}$"
+                            @input="formatUppercase('signData.sta.numbering')">
+                    </label>
+                    <label v-show="signData.numbering">
+                        <input
+                            type="checkbox"
+                            v-model="signData.sta.enableTlc">
+                        <span class="toggle"></span>
+                        スリーレターコードあり
+                    </label>
+                    <label v-show="signData.numbering && signData.sta.enableTlc">
+                        <div class="label-text">スリーレターコード文字</div>
+                        <input
+                            type="text"
+                            v-model="signData.sta.tlc"
+                            pattern="^[A-Z]{3}$"
+                            @input="formatUppercase('signData.sta.tlc')">
+                    </label>
+                </section>
+            </section>
+            <!--<section id="general" class="row">
                 <section>
                     <h2>駅名標サイズ</h2>
                     <label>
@@ -101,9 +213,10 @@
                         </div>
                     </label>
                 </section>
-            </section>
+            </section>-->
         </section>
 
+        <script src="https://unpkg.com/vue" defer></script>
         <script src="script.js" defer></script>
     </body>
 </html>
