--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <label>
                         <div class="label-text">筐体タイプ</div>
                         <div class="input">
-                            <select v-model="signData.board.type" @change="changeBoardType">
+                            <select v-model="signBoard.type" @change="changeBoardType">
                                 <option value="none">なし</option>
                                 <option value="floure">蛍光灯型</option>
                                 <option value="led">LED型</option>
@@ -61,7 +61,7 @@
                     <label>
                         <input
                             type="checkbox"
-                            v-model="signData.board.light"
+                            v-model="signBoard.light"
                             :disabled="!enableBoardLight">
                         <span class="toggle"></span>
                         点灯する
@@ -69,68 +69,82 @@
                     <label>
                         <input
                             type="checkbox"
-                            v-model="signData.numbering">
+                            v-model="numbering">
                         <span class="toggle"></span>
                         ナンバリング・4ヶ国語表記
                     </label>
+                    <label>
+                        <input
+                            type="checkbox"
+                            v-model="branchRight">
+                        <span class="toggle"></span>
+                        右分岐
+                    </label>
+                    <label>
+                        <input
+                            type="checkbox"
+                            v-model="branchLeft">
+                        <span class="toggle"></span>
+                        左分岐
+                    </label>
                 </section>
                 <section>
-                    <h2>駅名{{signData.numbering? "・ナンバリング" : ""}}</h2>
+                    <h2>駅名{{numbering? "・ナンバリング" : ""}}</h2>
                     <label>
                         <div class="label-text">駅名 日本語(漢字)</div>
                         <input
                             type="text"
-                            v-model="signData.sta.name.kanji">
+                            v-model="sta.name.kanji">
                     </label>
                     <label>
                         <div class="label-text">駅名 英語(アルファベット)</div>
                         <input
                             type="text"
-                            v-model="signData.sta.name.english">
+                            v-model="sta.name.english">
                         <div class="ex-input">
-                            <div v-for="c in macrons" @click="signData.sta.name.english += c">{{c}}</div>
+                            <div v-for="c in macrons" @click="sta.name.english += c">{{c}}</div>
                         </div>
                     </label>
                     <label>
                         <div class="label-text">駅名 日本語(ひらがな)</div>
                         <input
                             type="text"
-                            v-model="signData.sta.name.kana">
+                            v-model="sta.name.kana">
                     </label>
-                    <label v-show="signData.numbering">
+                    <label v-show="numbering">
                         <div class="label-text">駅名 中国語(簡体字)</div>
                         <input
                             type="text"
-                            v-model="signData.sta.name.chinese">
+                            v-model="sta.name.chinese">
                     </label>
-                    <label v-show="signData.numbering">
+                    <label v-show="numbering">
                         <div class="label-text">駅名 韓国語(ハングル)</div>
                         <input
                             type="text"
-                            v-model="signData.sta.name.korean">
+                            v-model="sta.name.korean">
                     </label>
-                    <label v-show="signData.numbering">
+                    <label v-show="numbering">
                         <div class="label-text">ナンバリング</div>
                         <input
                             type="text"
-                            v-model="signData.sta.numbering"
+                            v-model="sta.numbering"
                             pattern="^[A-Z]{2}\s*(-\s*)?[0-9]{2}$"
-                            @input="formatUppercase('signData.sta.numbering')">
+                            @input="formatUppercase('sta.numbering')">
                     </label>
-                    <label v-show="signData.numbering">
+                    <label v-show="numbering">
                         <input
                             type="checkbox"
-                            v-model="signData.sta.enableTlc">
+                            v-model="sta.enableTlc">
                         <span class="toggle"></span>
                         スリーレターコードあり
                     </label>
-                    <label v-show="signData.numbering && signData.sta.enableTlc">
+                    <label v-show="numbering && sta.enableTlc">
                         <div class="label-text">スリーレターコード文字</div>
                         <input
                             type="text"
-                            v-model="signData.sta.tlc"
+                            v-model="sta.tlc"
                             pattern="^[A-Z]{3}$"
-                            @input="formatUppercase('signData.sta.tlc')">
+                            @input="formatUppercase('sta.tlc')">
                     </label>
                 </section>
             </section>
