faviconがchromeで表示されない

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <base href="index.html">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Sigene 駅名標ジェネレーター</title>
+        <link rel="icon" type="image/svg+xml" href="favicon.svg">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
