ラッパー作り始めた

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="header-flex">
-                <h1><img src="logo_text_white.svg" alt="Sigene"> <small>駅名標ジェネレーター</small></h1>
+                <h1><!--<img src="logo_text_white.svg" alt="Sigene"> --><small>駅名標ジェネレーター</small></h1>
                 <ul>
                     <li><a href="index.html">Top</a></li>
                     <li><a href="about/index.html">About</a></li>
@@ -160,6 +160,7 @@
         </section>
 
         <script src="https://unpkg.com/vue" defer></script>
+        <script src="canvas.js" defer></script>
         <script src="script.js" defer></script>
     </body>
 </html>
