lightからshadowに変更

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="canvasArea">
             <canvas id="canvas1" width="2250" height="600"></canvas>
         </section>
-        <section id="vm" class="form" v-cloak @input="update" @change="update">
+        <section id="vm" class="form" v-cloak @change="update">
             <section class="row">
                 <section>
                     <button @click="save">入力内容を保存</button>
