緑線できた

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="label-text">この方面への帯の色</div>
                         <input
                             type="color"
-                            v-model="rightStations[0].bandColor">
+                            v-model="rightStations[0].lineColor">
                     </label>
                     <label>
                         <input
@@ -241,7 +241,7 @@
                         <div class="label-text">この方面への帯の色</div>
                         <input
                             type="color"
-                            v-model="rightStations[1].bandColor">
+                            v-model="rightStations[1].lineColor">
                     </label>
                     <label>
                         <input
@@ -293,7 +293,7 @@
                         <div class="label-text">この方面への帯の色</div>
                         <input
                             type="color"
-                            v-model="leftStations[0].bandColor">
+                            v-model="leftStations[0].lineColor">
                     </label>
                     <label>
                         <input
@@ -345,7 +345,7 @@
                         <div class="label-text">この方面への帯の色</div>
                         <input
                             type="color"
-                            v-model="leftStations[1].bandColor">
+                            v-model="leftStations[1].lineColor">
                     </label>
                     <label>
                         <input
