ナンバリングつけた

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Sigene 駅名標ジェネレーター</title>
         <link rel="icon" type="image/svg+xml" href="favicon.svg">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700&text=0123456789MS">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700&text=ABDEFGHIJLMNOPQRSTUVWXYZ">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&text=CK">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
