--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                             list="blackColors"
                             v-model="black">
                     </label>
+                    <label>
+                        <color-picker value="#006400" :list="numberingColors"></color-picker>
+                    </label>
                 </section>
                 <section>
                     <h2>駅名{{numbering? "・ナンバリング" : ""}}</h2>
